--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,55 @@
+*
+{
+  padding:0;
+  margin:0;
+}
 body
 {
-  background:#cecece;
-  div
+  background:#fff7f7;
+  section
   {
-    width:100px;
-    height: 100px;
-    background:red;
-    box-shadow: 10px 10px 0 #000;
+    position:absolute;
+    top:50%;
+    left:50%;
+    width:1000px;
+    height: 600px;
+    margin:-300px -500px;
+    border:1px solid red;
+
+    .modalP
+    {
+      transition: all linear .5s;
+      position:absolute;
+      top:0;
+      left:0;
+      width: 100%;
+      height:600px;
+      transform:scale(1,1);
+      background:red;
+    }
+    .ng-hide
+    {
+      opacity:0;
+      transform:scale(0,0);
+    }
+
   }
 }
+.item
+{
+  height: 188px;
+}
+.slide
+{
+  position: absolute;
+  width:100%;
+  animation-name: example;
+  animation-duration: .5s;
+}
+
+@keyframes example {
+  from {width:0;left:1000px;opacity: 0;}
+  to {width:100%;left: 0px;opacity: 1};
+}
+
+
