--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,10 +7,10 @@
 body
 {
   background-color:#000;
-  background-image: url("../img/bkg.png");
+  background-image: url("../img/bkg2.png");
   background-position: center 0;
   background-repeat:no-repeat;
-  background-size:1920px 1080px;
+  background-size:1920px 1080px !important;
   section {
     position: absolute;
     width: 100%;
@@ -74,16 +74,15 @@ body
 .titulo{color:#fff;cursor: pointer;}
 .etiqueta
 {
-  height: 40px;
-  width: 340px;
-  background: #fff;
+  height: 37px;
+  width: 576px;
+  background: url("../img/label1.png") no-repeat;
   line-height: 40px;
   text-align: center;
-  transform: skewX(-20deg);
   cursor: pointer;
   h2
   {
-    transform: skewX(20deg);
+    color: #353535;
   }
 }
 .btn-intro
@@ -92,47 +91,240 @@ body
   bottom:100px;
   right: 85px;
 }
+/* ------- Menu ------------------------------------------------- */
 
-.item
+nav
 {
   position: relative;
-  width: 100%;
-  height: 284px;
-  cursor: pointer;
-  overflow: hidden;
-  padding: 0 !important;
-  .item-title
+  width: 365px;
+  margin: 90px 0;
+}
+
+.bar-info
+{
+  position: absolute;
+  right: 30px;
+  width: 900px;
+  height: 40px;
+  color: #fff;
+  line-height: 40px;
+  top: 10px;
+  text-indent: 30px;
+  p
   {
-    position: absolute;
-    width:100%;
-    height:50%;
-    top:100%;
-    background: rgba(0,0,0,.3);
-    text-align: center;
-    transition: top .3s linear;
-  }
-  &:hover
-  {
-    .item-title
+    span
     {
-      top:50%;
+      font-size: 12pt;
     }
   }
 }
-/************************Animaciones*****************/
+.bar-bg { background: url('../img/bar.png'); }
+.bar-bg1 { background: url('../img/bar1.png'); }
+.bar-bg2 { background: url('../img/bar2.png'); }
+.bar-bg3 { background: url('../img/bar3.png'); }
+.bar-bg4 { background: url('../img/bar4.png'); }
+.bar-bg5 { background: url('../img/bar5.png'); }
 
+.section-bg1{ background: rgb(75,170,24);}
+.section-bg2{ background: rgb(72,183,169);}
+.section-bg3{ background: rgb(147,192,31);}
+.section-bg4{ background: rgb(207,14,75);}
+.section-bg5{ background: rgb(239,131,11);}
 
-.filter
+.item-menu
 {
-  background-color:rgba(0,0,0,.7);
-  animation: filter .3s linear;
+  cursor: pointer;
+  -webkit-transition: all .5s;
+  -moz-transition:  all .5s;
+  -ms-transition:  all .5s;
+  -o-transition:  all .5s;
+  transition:  all .5s;
+  &:hover
+  {
+    opacity: .7;
+  }
+}
+#instruction
+{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 1170px;
+  height:600px;
+  background: #fff;
+}
+/* ------ Menu Modulos ------------------------------------------ */
+.logo
+{
+  position: absolute;
+  top:5px;
+  left:10px;
+}
+.botonera
+{
+  position: relative;
+  width: 860px;
+  height: 490px;
+  margin: 10px auto;
+
+  .boton
+  {
+    cursor:pointer;
+    width: 300px;
+  }
+  .lineamenu
+  {
+    position: absolute;
+    top: 190px;
+    left: 212px;
+  }
+  #btnconcepto
+  {
+    position: absolute;
+    top:10px;
+    left: 270px;
+    img
+    {
+      position: absolute;
+      width: 218px;
+    }
+  }
+  #btnvideo
+  {
+    position: absolute;
+    bottom: 190px;
+    left: 60px;
+    img
+    {
+      position: absolute;
+      width: 218px;
+    }
+  }
+  #btnpractica
+  {
+    position: absolute;
+    bottom: 245px;
+    right: 40px;
+    img
+    {
+      position: absolute;
+      width: 218px;
+    }
+  }
 }
 
-@keyframes filter {
-  from {background-color:rgba(0,0,0,.0)}
-  to {background-color:rgba(0,0,0,.5)}
+.btn-home
+{
+  position: absolute;
+  bottom: 20px;
+  right: 45px;
+  border: 3px dashed #757575;
+  width: 70px;
+  height: 70px;
+  font-size: 32pt;
+  border-radius: 100px;
+  color: #757575;
+  padding: 4px 9px;
+  &:hover
+  {
+    border: 3px dashed #4BAA18;
+    color:#4BAA18;
+  }
 }
 
-a{text-decoration: none;}
+/* ------------------------------- Infografía ----------------------------*/
+#infografia
+{
+  position: relative;
+  width: 900px;
+  height: 600px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.pag
+{
+  width: 100%;
+  height:100%;
+  background: #fff;
+}
+.cerrar
+{
+  position: absolute;
+  color: rgba(255, 36, 78, 1) !important;
+  font-size: 28pt;
+  width: 43px;
+  height: 43px;
+  line-height: 40px;
+  text-align: center;
+  right: 0px;
+  top: 0px;
+  cursor: pointer;
+  z-index: 3000;
+  text-decoration: none;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -ms-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+.cerrar:hover
+{
+  text-decoration: none;
+  color:#ff0000;
+}
 
+.nav-infografia
+{
+  font-size: 25pt;
+  float: right;
+  margin:0 10px;
+  cursor: pointer;
+  transition: all .5s;
+}
+.nav-infografia:hover{
+  color: #4BAA18;
+}
 
+/*-------------------- Actividad ---------------------------*/
+#video
+{
+  position: relative;
+  width: 900px;
+  height: 600px;
+  margin: 0 auto;
+  //overflow: hidden;
+}
+#actividad
+{
+  position: relative;
+  width: 900px;
+  height: 600px;
+  margin: 0 auto;
+  overflow: hidden;
+  font-family: 'Lato', sans-serif;
+  color:#686868;
+}
+
+ul
+{
+  list-style:none;
+}
+/*------------------------- opcionales ---------------------*/
+.smart
+{
+  position: absolute;
+  top: 185px;
+  font-size: 72pt;
+  font-weight: bold;
+  text-align: center;
+  left: 217px;
+  span
+  {
+    cursor: pointer;
+    color: #FCC733;
+  }
+}
+.activeL
+{
+  color:#EF830B !important;
+}
